bad/bin_op_and_string_bool.example_compiler_output
ERROR
[1mbad/bin_op_and_string_bool.lat:3:5: [1;31merror: [0;1moperator && is defined only for `boolean` values, not `string` and `boolean`[m
	"" && true;
	   [1;32m^[m
